// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should match snapshot for Desktop variant 1`] = `
<p
  class="root variantDesktop"
>
  Hello World
</p>
`;

exports[`<Text /> should match snapshot for Mobile variant 1`] = `
<p
  class="root variantMobile"
>
  Hello World
</p>
`;

exports[`<Text /> should match snapshot when empty 1`] = `
<p
  class="root"
/>
`;

exports[`<Text /> should match snapshot with text 1`] = `
<p
  class="root"
>
  Hello World
</p>
`;

exports[`<Text /> when muted should match snapshot 1`] = `
<p
  class="root muted"
>
  Hello World
</p>
`;
